--- a/styles/style.css
+++ b/styles/style.css
@@ -1,140 +1,153 @@
-html {
-    position: relative;
-    min-height: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+/* http://meyerweb.com/eric/tools/css/reset/
+v2.0 | 20110126 License : none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center, dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+margin: 0;
+padding: 0;
+border: 0;
+font-size: 100%;
+font: inherit;
+vertical-align: baseline;
 }
-
-h1 {
-
-    text-align:center;
-    color:#001427;
-    font-family: Impact, 'Arial Narrow Bold', sans-serif;
-    letter-spacing: 4px;
-    font-size:500%;
-    text-transform: uppercase;
-    margin: auto;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+display: block;
 }
-
-h3 {
-    background-color: #F7DA15;
-}
-
-header {
-    margin:0;
-    padding-bottom: 2em;
-    background-image: url("../images/Picto_handicap.svg.png")
-
-}
-
-header img {
-    max-width: 12%;
-    height: auto;
-    display: block;
-    position:relative;
-    left: -.0625rem;
-    top: 0;
-}
-
-.boite{
-    display: flex;
-}
-
 body {
-    background-color: #F2F2F2;
-	margin: 0;
-	display: grid;
-	grid-template-rows: auto 1fr auto;
-    padding-bottom: 5em;
+line-height: 1;
+}
+ol, ul {
+list-style: none;
+}
+blockquote, q {
+quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+content: '';
+content: none;
+}
+table {
+border-collapse: collapse;
+border-spacing: 0;
 }
 
+/*---------------------------------------------*/
 
-.menu {
-    background-color: #C2CEDE;
-    padding-top:2%;
-    padding-bottom: 2%;
+body{
+    font-family: "Inter", sans-serif !important;
 }
 
-.nav-link.active{
-    background-color: #E90018 !important;
+main{
+    margin: 100px 0;
 }
 
-.menu a{
-    color: #001427;
+.container-fluid{
+    padding: 0 !important;
 }
 
-.menu a:hover {
-    background-color:#F2F2F2; 
-    font-weight:bold;
-    color:#E90018;
+.normandie-logo{
+    width: 40%;
 }
 
-article{
-    margin: 5%;
-    margin-bottom: 2%;
+.normandie-logo-img{
+    width: 100%;
 }
 
-article p {
+.active{
+    color: #e0052c !important;
+}
+.nav-link{
+    font-size: 20px;
+    padding: 15px !important;
+}
+textarea:focus-visible, .nav-link:focus-visible{
+    box-shadow: 0 0 0 .25rem rgba(224, 5, 44, 0.5);
+    border-radius: 7px;
+}
+.h-50v{
+    height: 50vh;
+    object-fit: cover;
+}
+/*---------------------------------------------*/
+
+.h1{
+    text-align:center;
+}
+p{
     text-align:justify;
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(44, 7, 53);
+    font-family:arial;
+    font-size: 20px;
 }
-
-.conteneur{
-    display:flex;
-    margin: 3%;
+.h2{
+    margin-top: 30px;
 }
-
-
-.block_liens{
-    background-color: #C2CEDE;
-    width: fit-content;
-    padding: 2%;
-    border-radius: 15px;
-    text-align: center;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.h3{
+    margin: 20px;
 }
-
-.block_centres{
-    margin: auto;
+.btn-danger{
+    margin-top:20px
+}
+.img{
     display:block;
+    margin-left:auto;
+    margin-right:auto
+}
+ul{
+        list-style-type: disc;
 }
 
-.block_liens a{
-    text-decoration: none;
-    color: #001427;
+/*---------------------------------------------*/
+
+.gg-form{
+    text-align: center;
 }
 
-.savoir_plus{
-    margin-left: 75%;
-    margin-right: 10%;
-    background-color: #E90018;
+.aideimg{
+    float: left;
+    width:  100%;
+    height: 200px;
+    object-fit: cover;
 }
 
-.conteneur a:hover {
-    font-weight:bold;
-    color:#E90018;
+/*---------------------------------------------*/
+.back-blue{
+    background-color: rgba(0, 0, 0, 0.9);
 }
-
 
 footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    background-color: #001427;
-    color: #F2F2F2; 
-    display: flex;
+    color: white !important;
 }
 
-footer p,a  {
-    display:inline-block;
-    margin:auto;
+.text-body-secondary{
+    color: white !important;
 }
-
-footer p{
-    margin-left: 0.5em;;
+footer .nav-link:focus-visible:focus{
+    box-shadow: 0 0 0 .25rem rgba(255, 255, 255, 0.5);
+    border-radius: 7px;
 }
-
-footer a {
-    margin-right:0.5em;
+footer.row{
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
-
+.img-iut-gon{
+    width: 200px;
+}
+.spaced-welcome{
+    margin-top: 30px;
+}
